Write the outline of a snackbar feature
Right now, it isn't actually triggerable—it just always hangs out on the page. (Later, we'll make it pop up and down.)

--- a/client/styles/_theme.sass
+++ b/client/styles/_theme.sass
@@ -1,13 +1,15 @@
-$color-blossom: #333377
-$color-fade: #982c61
-
+// Sakura makes use of these variables.
+$color-blossom: #337
+$color-fade: #936
 $color-bg: #f9f9f9
 $color-bg-alt: #f1f1f1
-
-$color-text: #4a4a4a
+$color-text: #444
 $font-size-base: 1.8rem
-
 $font-family-base: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif
 $font-family-heading: $font-family-base
 
 @import "sakura.css/scss/main"
+
+// These are additional variables that aren't used by Sakura.
+$color-bg-dark: #445
+$color-text-dark: #eee
