--- a/client/styles/_snackbar.sass
+++ b/client/styles/_snackbar.sass
@@ -1,13 +1,24 @@
 @use "theme"
 
 .snackbar
-  position: absolute
-  left: 0
-  right: 0
+  position: fixed
+  left:0
+  right:0
   bottom: 0
-  margin: 0em 0.4em 0.2em
-  padding: 0.2em 1.4em
+  // This width is a bit imprecise--I just chose a value that looked good
+  // ¯\_(ツ)_/¯
+  width: min(40em, 80%)
+  margin: 0 auto 0.4em
+  padding: 0.4em 1.4em
   border-radius: 0.4em
   box-shadow: 0 0 0.2em gray
   background-color: theme.$color-bg-dark
   color: theme.$color-text-dark
+  &.hidden
+    transform: translate(0, 100%)
+    opacity: 0
+  &:not(.hidden)
+    transform: translate(0, 0)
+    opacity: 1
+  transition: transform 0.5s ease, opacity 0.5s ease
+
