--- a/client/styles/_theme.sass
+++ b/client/styles/_theme.sass
@@ -1,6 +1,6 @@
 // Sakura makes use of these variables.
-$color-blossom: #337
-$color-fade: #936
+$color-blossom: #345
+$color-fade: #3d9
 $color-bg: #f9f9f9
 $color-bg-alt: #f1f1f1
 $color-text: #444
@@ -11,5 +11,5 @@ $font-family-heading: $font-family-base
 @import "sakura.css/scss/main"
 
 // These are additional variables that aren't used by Sakura.
-$color-bg-dark: #445
-$color-text-dark: #eee
+$color-bg-dark: $color-blossom
+$color-text-dark: #ddd
