--- a/client/styles/index.sass
+++ b/client/styles/index.sass
@@ -15,3 +15,16 @@ body
 
 .error
   font-family: monospace
+
+.add-watchlist-item
+  display: flex
+  align-items: center
+  input
+    margin: 0
+  a
+    @include theme.icon-button
+    margin-left: 0.4em
+
+ul.watchlist
+  list-style: none
+  padding-left: 0
