--- a/client/styles/_theme.sass
+++ b/client/styles/_theme.sass
@@ -1,3 +1,7 @@
+// Import some fonts.
+// Roboto (regular and regular italic), and Roboto Mono (regular):
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&family=Roboto+Mono&display=swap')
+
 // Sakura makes use of these variables.
 $color-blossom: #345
 $color-fade: #3d9
@@ -5,7 +9,7 @@ $color-bg: #f9f9f9
 $color-bg-alt: #f1f1f1
 $color-text: #444
 $font-size-base: 1.8rem
-$font-family-base: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif
+$font-family-base: Roboto, sans-serif
 $font-family-heading: $font-family-base
 
 @import "sakura.css/scss/main"
@@ -18,6 +22,9 @@ $color-text-dark: #ddd
 
 /** A neutral color for adding some more contrast without drawing attention: */
 $color-fg-neutral: $color-text-dark
+
+/** A monospace font */
+$font-family-monospace: 'Roboto Mono', monospace
 
 // I could do with a bit of a border around unselected inputs; they're too
 // low-contrast right now.
@@ -36,7 +43,7 @@ input[type]
   // override some of that.
   &:hover
     // ($color-fade is actually the default for hovered links in Sakura, but
-    // I'm including it for completeness.)
+    // I'm including it here for completeness.)
     color: $color-fade
     // Sakura gives links a border-bottom on hover, which isn't going to work
     // on these icon buttons.
