Add validation to the new-item input
Also, we now let you add the item by hitting enter in addition to clicking the button.

Now all that's left is testing!

--- a/client/styles/_theme.sass
+++ b/client/styles/_theme.sass
@@ -23,6 +23,9 @@ $color-text-dark: #ddd
 /** A neutral color for adding some more contrast without drawing attention: */
 $color-fg-neutral: $color-text-dark
 
+/** A color for error messages: */
+$color-warn: firebrick
+
 /** A monospace font */
 $font-family-monospace: 'Roboto Mono', monospace
 
