--- a/client/styles/index.sass
+++ b/client/styles/index.sass
@@ -17,14 +17,30 @@ body
   font-family: theme.$font-family-monospace
 
 .add-watchlist-item
-  display: flex
-  align-items: center
+  display: grid
+  grid-template-columns: auto 1fr
+  grid-template-rows: max-content max-content
+  grid-template-areas: "input add-button" "validation validation"
   margin-bottom: 0.4em
-  input
-    margin: 0
-  a
-    @include theme.icon-button
-    margin-left: 0.4em
+
+
+.add-watchlist-item input
+  grid-area: input
+  margin: auto
+  &.invalid
+    border-color: theme.$color-warn
+
+.add-watchlist-item a
+  grid-area: add-button
+  @include theme.icon-button
+  // Icon buttons have a lot of space on the top and bottom, so use negative
+  // margins to make them shorter.
+  margin: -0.2em auto -0.2em 0.4em
+
+.add-watchlist-item .validation-error
+  grid-area: validation
+  color: theme.$color-warn
+  font-size: smaller
 
 ul.watchlist
   list-style: none
