--- a/client/styles/index.sass
+++ b/client/styles/index.sass
@@ -23,14 +23,13 @@ body
   grid-template-areas: "input add-button" "validation validation"
   margin-bottom: 0.4em
 
-
 .add-watchlist-item input
   grid-area: input
   margin: auto
   &.invalid
     border-color: theme.$color-warn
 
-.add-watchlist-item a
+.add-watchlist-item .add-button
   grid-area: add-button
   @include theme.icon-button
   // Icon buttons have a lot of space on the top and bottom, so use negative
