Implement deleting watchlist items
(There's no new server-side work, since we're using the same PUT endpoint as before.)

I've fixed up a few broken tests, but I haven't actually written new tests for deleting watchlist items. That's coming next.

--- a/client/styles/index.sass
+++ b/client/styles/index.sass
@@ -44,3 +44,12 @@ body
 ul.watchlist
   list-style: none
   padding-left: 0
+
+ul.watchlist li
+  width: 100%
+  display: flex
+  align-items: center
+
+ul.watchlist li .delete-button
+  @include theme.icon-button
+  margin-right: 0.4em
