Use <button> rather than <a> for buttons
This makes the UX on different platforms--especially iOS--a lot nicer.
(Different tags come with different sets of behavior, like hover
outlines or focus indicators or pressing response, and it's important
that we use the right set of those.)

--- a/client/styles/index.sass
+++ b/client/styles/index.sass
@@ -1,5 +1,5 @@
-@use 'theme'
-@use 'snackbar'
+@use "theme"
+@use "snackbar"
 
 html, body
   height: 100%
@@ -32,9 +32,7 @@ body
 .add-watchlist-item .add-button
   grid-area: add-button
   @include theme.icon-button
-  // Icon buttons have a lot of space on the top and bottom, so use negative
-  // margins to make them shorter.
-  margin: -0.2em auto -0.2em 0.4em
+  margin: 0 auto 0 0.1em
 
 .add-watchlist-item .validation-error
   grid-area: validation
