--- a/client/styles/_snackbar.sass
+++ b/client/styles/_snackbar.sass
@@ -1,4 +1,4 @@
-@use 'theme'
+@use "theme"
 
 .snackbar
   position: fixed
@@ -8,7 +8,7 @@
   // The width is a bit imprecise--I just chose a value that looked good! 🙃
   width: min(40em, 80%)
   margin: 0 auto 0.4em
-  padding: 0 1.4em
+  padding: 0.6em 1.4em
   display: flex
   justify-content: space-between
   align-items: center
